--- a/01/.vscode/settings.json
+++ b/01/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "window.zoomLevel": 0,
   "code-runner.executorMap": {
-    "typescript": "clear && npx ts-node --files --transpile-only",
+    "typescript": "clear && npx ts-node --files ", //--transpile-only
   }
 }
