--- a/02InstalandoBABEL/.gitignore
+++ b/02InstalandoBABEL/.gitignore
@@ -2,7 +2,7 @@
 # Created by https://www.toptal.com/developers/gitignore/api/node
 # Edit at https://www.toptal.com/developers/gitignore?templates=node
 
-./frontend/assets/js
+frontend assets js
 
 ### Node ###
 # Logs
