--- a/02InstalandoBABEL/.gitignore
+++ b/02InstalandoBABEL/.gitignore
@@ -1,8 +1,8 @@
+frontend/assets
 
 # Created by https://www.toptal.com/developers/gitignore/api/node
 # Edit at https://www.toptal.com/developers/gitignore?templates=node
 
-frontend
 
 ### Node ###
 # Logs
